# Adaptive-AUTOSAR

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  abstract__state__machine_8h_source.html  alive__supervision_8h_source.html  annotated.html  annotated_dup.js  argument_8h_source.html  argument__configuration_8h_source.html  arxml__node_8h_source.html  arxml__node__iterator_8h_source.html  arxml__node__range_8h_source.html  arxml__reader_8h_source.html  atomic__optional_8h_source.html  cancellation__handler_8h_source.html  checkpoint__communicator_8h_source.html  classAn.html  classDiagnostic.html  classapplication_1_1ExtendedVehicle-members.html  classapplication_1_1ExtendedVehicle.html  classapplication_1_1ExtendedVehicle.js  classapplication_1_1doip_1_1DiagMessageHandler-members.html  classapplication_1_1doip_1_1DiagMessageHandler.html  classapplication_1_1doip_1_1DiagMessageHandler.js  classapplication_1_1doip_1_1DoipClient-members.html  classapplication_1_1doip_1_1DoipClient.html  classapplication_1_1doip_1_1DoipClient.js  classapplication_1_1doip_1_1DoipMessageHandler-members.html  classapplication_1_1doip_1_1DoipMessageHandler.html  classapplication_1_1doip_1_1DoipMessageHandler.js  classapplication_1_1doip_1_1DoipServer-members.html  classapplication_1_1doip_1_1DoipServer.html  classapplication_1_1doip_1_1DoipServer.js  classapplication_1_1doip_1_1ObdToDoipConverter-members.html  classapplication_1_1doip_1_1ObdToDoipConverter.html  classapplication_1_1doip_1_1ObdToDoipConverter.js  classapplication_1_1doip_1_1VehicleIdRequestHandler-members.html  (+1179 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake.yml
ara/core/: error_code.h  error_domain.h  instance_specifier.h  optional.h  result.h
ara/diag/: cancellation_handler.h  condition.h  conversation.h  diag_error_domain.h  download.h  ecu_reset_request.h  generic_uds_service.h  monitor.h  operation_cycle.h  upload.h
ara/exec/: deterministic_client.h  error_code_domain.h  execution_client.h  state_client.h
ara/log/: argument.h  log_stream.h
ara/sm/: trigger.h
configuration/: diagnostic_manager_manifest.arxml  execution_manifest.arxml  extended_vehicle_manifest.arxml  health_monitoring_manifest.arxml
doc/: .travis.yml  doxygen.conf  simulation_flow_diagram.drawio
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+91 more)
src/: main.cpp
src/application/: extended_vehicle.cpp  extended_vehicle.h
src/application/doip/: diag_message_handler.cpp  diag_message_handler.h  doip_client.cpp  doip_client.h  doip_message_handler.cpp  doip_message_handler.h  doip_server.cpp  doip_server.h  obd_to_doip_converter.cpp  obd_to_doip_converter.h  vehicle_id_request_handler.cpp  vehicle_id_request_handler.h
src/application/helper/: argument_configuration.cpp  argument_configuration.h  curl_wrapper.cpp  curl_wrapper.h  fifo_checkpoint_communicator.cpp  fifo_checkpoint_communicator.h  log_recovery_action.cpp  log_recovery_action.h  memory_cache.h  network_configuration.cpp  network_configuration.h  read_data_by_identifier.cpp  read_data_by_identifier.h  rpc_configuration.cpp  rpc_configuration.h
src/application/platform/: diagnostic_manager.cpp  diagnostic_manager.h  execution_management.cpp  execution_management.h  platform_health_management.cpp  platform_health_management.h  state_management.cpp  state_management.h
src/ara/core/: error_code.cpp  error_code.h  error_domain.h  instance_specifier.cpp  instance_specifier.h  optional.h  result.h
src/ara/diag/: cancellation_handler.cpp  cancellation_handler.h  communication_control.h  condition.cpp  condition.h  conversation.cpp  conversation.h  diag_error_domain.cpp  diag_error_domain.h  diag_uds_nrc_error_domain.h  download.cpp  download.h  dtc_information.cpp  dtc_information.h  ecu_reset_request.cpp  ecu_reset_request.h  event.cpp  event.h  generic_routine.cpp  generic_routine.h  generic_uds_service.h  indicator.h  meta_info.cpp  meta_info.h  monitor.cpp  monitor.h  operation_cycle.cpp  operation_cycle.h  reentrancy.h  security_access.cpp  security_access.h  service_validation.h  upload.cpp  upload.h
src/ara/exec/: deterministic_client.cpp  deterministic_client.h  error_code_domain.h  exec_error_domain.cpp  exec_error_domain.h  exec_exception.cpp  exec_exception.h  execution_client.cpp  execution_client.h  execution_error_event.h  execution_server.cpp  execution_server.h  function_group.cpp  function_group.h  function_group_state.cpp  function_group_state.h  state_client.cpp  state_client.h  state_server.cpp  state_server.h  worker_runnable.h  worker_thread.cpp  worker_thread.h
src/ara/log/: argument.cpp  argument.h  common.h  log_stream.cpp  log_stream.h  logger.cpp  logger.h  logging_framework.cpp  logging_framework.h
src/ara/phm/: checkpoint_communicator.cpp  checkpoint_communicator.h  recovery_action.cpp  recovery_action.h  supervised_entity.cpp  supervised_entity.h
src/ara/sm/: notifier.h  power_mode.h  states.h  trigger.h  trigger_in.h  trigger_inout.h  trigger_out.h
src/arxml/: arxml_node.cpp  arxml_node.h  arxml_node_iterator.h  arxml_node_range.h  arxml_reader.cpp  arxml_reader.h
test/ara/core/: error_code_test.cpp  error_domain_test.cpp  instance_specifier_test.cpp  optional_test.cpp  result_test.cpp  result_void_test.cpp
test/ara/diag/: cancellation_handler_test.cpp  condition_test.cpp  conversation_test.cpp  diag_error_domain_test.cpp  doip_lib_test.cpp  download_test.cpp  dtc_information_test.cpp  ecu_reset_request_test.cpp  event_test.cpp  generic_routine_test.cpp  meta_info_test.cpp  (+5 more)
test/arxml/: arxml_node_test.cpp  arxml_reader_test.cpp
(+182 files in other folders)
